--- a/global.css
+++ b/global.css
@@ -4,16 +4,24 @@
     box-sizing: border-box;
 }
 :root{
-    --brand-color:#EF5F4C
-    --background-color:#FFFFFF
-    --surface-color:#F5F5F5
-    --skeleton-color:#D9D9D9
-    --shape-transparency:#FFFFFF91 
-    --text-color-primary:#313131
-    --text-color-secondary:#6C6C6C
+    --brand-color:#EF5F4C;
+    --background-color:#FFFFFF;
+    --surface-color:#F5F5F5;
+    --skeleton-color:#D9D9D9;
+    --shape-transparency:#FFFFFF91 ;
+    --text-color-primary:#313131;
+    --text-color-secondary:#6C6C6C;
+    --font-family: "Poppins", sans-serife;
+    --text:16px/150% var(--font-family)
+    --text-lg:bold 32/124% var(--font-family);
+    --text-md:14px 170% var(--font-family);
+    --text-sm: 12px 170% var(--font-family)
 
 }
 body{
+    font: var(--text);
     color: var(--text-color-secondary);
     background-color: var(--background-color);
 }
+
+
