--- a/styles/style.css
+++ b/styles/style.css
@@ -13,9 +13,9 @@
     --text-color-secondary:#6C6C6C;
     --font-family: "Poppins", sans-serife;
     --text:16px/150% var(--font-family)
-    --text-lg:bold 32/124% var(--font-family);
-    --text-md:14px 170% var(--font-family);
-    --text-sm: 12px 170% var(--font-family)
+    --text-lg:bold 32px/124% var(--font-family);
+    --text-md:14px/170% var(--font-family);
+    --text-sm: 12px/170% var(--font-family)
 
 }
 body{
@@ -23,5 +23,17 @@ body{
     color: var(--text-color-secondary);
     background-color: var(--background-color);
 }
+a{
+    text-decoration: none;
+    color: inherit;
+}
+a:hover{
+    color: var(--brand-color);
+    text-decoration: underline;
 
-
+}
+.container{
+    padding-inline: 32px;
+    max-width: 1280px;
+    margin-inline: auto;
+}
